# nlp

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  setup.cfg  testcase.py  tox.ini
.github/workflows/: dev.txt  test.yml
input/: database.sql  query.csv
model/: Parser.py
tests/: expected  test_output.py
